Python/PythonDjango/cmdLogs20240514DjangoPipPythonInstllation.TXT
Microsoft Windows [Version 10.0.19045.4291]
(c) Microsoft Corporation. All rights reserved.



C:\Users\abhi06tk\AppData\Local\Programs\Python\Python311>python get-pip.py
python.exe: can't open file 'C:\\Users\\abhi06tk\\AppData\\Local\\Programs\\Python\\Python311\\get-pip.py': [Errno 2] No such file or directory

C:\Users\abhi06tk\AppData\Local\Programs\Python\Python311>curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
100 2574k  100 2574k    0     0  1930k      0  0:00:01  0:00:01 --:--:-- 1936k

C:\Users\abhi06tk\AppData\Local\Programs\Python\Python311>python get-pip.py
Collecting pip
  Downloading pip-24.0-py3-none-any.whl.metadata (3.6 kB)
Collecting wheel
  Downloading wheel-0.43.0-py3-none-any.whl.metadata (2.2 kB)
Downloading pip-24.0-py3-none-any.whl (2.1 MB)
   ---------------------------------------- 2.1/2.1 MB 2.3 MB/s eta 0:00:00
Downloading wheel-0.43.0-py3-none-any.whl (65 kB)
   ---------------------------------------- 65.8/65.8 kB 197.6 kB/s eta 0:00:00
Installing collected packages: wheel, pip
  Attempting uninstall: pip
    Found existing installation: pip 24.0
    Uninstalling pip-24.0:
      Successfully uninstalled pip-24.0
Successfully installed pip-24.0 wheel-0.43.0




C:\WINDOWS\system32>python --version
Python 3.11.9

C:\WINDOWS\system32>pip --version
Unable to create process using 'C:\Users\abhi06tk\Anaconda3\python.exe C:\Users\abhi06tk\Anaconda3\Scripts\pip-script.py --version'

C:\WINDOWS\system32>pip --version
Unable to create process using 'C:\Users\abhi06tk\Anaconda3\python.exe C:\Users\abhi06tk\Anaconda3\Scripts\pip-script.py --version'

C:\WINDOWS\system32>pip install virtualenv
Unable to create process using 'C:\Users\abhi06tk\Anaconda3\python.exe C:\Users\abhi06tk\Anaconda3\Scripts\pip-script.py install virtualenv'

C:\WINDOWS\system32>^X

C:\WINDOWS\system32>cd \d D:
The filename, directory name, or volume label syntax is incorrect.

C:\WINDOWS\system32>cd /d D:

D:\>cd Software/2024/Python

D:\Software\2024\Python>cd PythonDjango

D:\Software\2024\Python\PythonDjango>python get-pip.py
python: can't open file 'D:\\Software\\2024\\Python\\PythonDjango\\get-pip.py': [Errno 2] No such file or directory

D:\Software\2024\Python\PythonDjango>python
Python 3.11.9 (tags/v3.11.9:de54cf5, Apr  2 2024, 10:12:12) [MSC v.1938 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> python get-pip.py
  File "<stdin>", line 1
    python get-pip.py
           ^^^
SyntaxError: invalid syntax
>>> import django
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'django'
>>> exit()

D:\Software\2024\Python\PythonDjango>pip --version
pip 24.0 from C:\Users\abhi06tk\AppData\Local\Programs\Python\Python311\Lib\site-packages\pip (python 3.11)

D:\Software\2024\Python\PythonDjango>pip install virtualenv
Collecting virtualenv
  Downloading virtualenv-20.26.2-py3-none-any.whl.metadata (4.4 kB)
Collecting distlib<1,>=0.3.7 (from virtualenv)
  Downloading distlib-0.3.8-py2.py3-none-any.whl.metadata (5.1 kB)
Collecting filelock<4,>=3.12.2 (from virtualenv)
  Downloading filelock-3.14.0-py3-none-any.whl.metadata (2.8 kB)
Collecting platformdirs<5,>=3.9.1 (from virtualenv)
  Downloading platformdirs-4.2.1-py3-none-any.whl.metadata (11 kB)
Downloading virtualenv-20.26.2-py3-none-any.whl (3.9 MB)
   ---------------------------------------- 3.9/3.9 MB 2.8 MB/s eta 0:00:00
Downloading distlib-0.3.8-py2.py3-none-any.whl (468 kB)
   ---------------------------------------- 468.9/468.9 kB 1.2 MB/s eta 0:00:00
Downloading filelock-3.14.0-py3-none-any.whl (12 kB)
Downloading platformdirs-4.2.1-py3-none-any.whl (17 kB)
Installing collected packages: distlib, platformdirs, filelock, virtualenv
Successfully installed distlib-0.3.8 filelock-3.14.0 platformdirs-4.2.1 virtualenv-20.26.2

D:\Software\2024\Python\PythonDjango>virtualenv envDjangoPractice20240514
created virtual environment CPython3.11.9.final.0-64 in 24912ms
  creator CPython3Windows(dest=D:\Software\2024\Python\PythonDjango\envDjangoPractice20240514, clear=False, no_vcs_ignore=False, global=False)
  seeder FromAppData(download=False, pip=bundle, setuptools=bundle, wheel=bundle, via=copy, app_data_dir=C:\Users\abhi06tk\AppData\Local\pypa\virtualenv)
    added seed packages: pip==24.0, setuptools==69.5.1, wheel==0.43.0
  activators BashActivator,BatchActivator,FishActivator,NushellActivator,PowerShellActivator,PythonActivator

D:\Software\2024\Python\PythonDjango>envDjangoPractice20240514\Scripts\activate

D:\Software\2024\Python\PythonDjango>()

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango>pip install django
Collecting django
  Downloading Django-5.0.6-py3-none-any.whl.metadata (4.1 kB)
Collecting asgiref<4,>=3.7.0 (from django)
  Downloading asgiref-3.8.1-py3-none-any.whl.metadata (9.3 kB)
Collecting sqlparse>=0.3.1 (from django)
  Downloading sqlparse-0.5.0-py3-none-any.whl.metadata (3.9 kB)
Collecting tzdata (from django)
  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)
Downloading Django-5.0.6-py3-none-any.whl (8.2 MB)
   ---------------------------------------- 8.2/8.2 MB 2.4 MB/s eta 0:00:00
Downloading asgiref-3.8.1-py3-none-any.whl (23 kB)
Downloading sqlparse-0.5.0-py3-none-any.whl (43 kB)
   ---------------------------------------- 44.0/44.0 kB 197.3 kB/s eta 0:00:00
Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)
   ---------------------------------------- 345.4/345.4 kB 1.3 MB/s eta 0:00:00
Installing collected packages: tzdata, sqlparse, asgiref, django
Successfully installed asgiref-3.8.1 django-5.0.6 sqlparse-0.5.0 tzdata-2024.1

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango>



(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango>django-admin --version
5.0.6

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango>django-admin

Type 'django-admin help <subcommand>' for help on a specific subcommand.

Available subcommands:

[django]
    check
    compilemessages
    createcachetable
    dbshell
    diffsettings
    dumpdata
    flush
    inspectdb
    loaddata
    makemessages
    makemigrations
    migrate
    optimizemigration
    runserver
    sendtestemail
    shell
    showmigrations
    sqlflush
    sqlmigrate
    sqlsequencereset
    squashmigrations
    startapp
    startproject
    test
    testserver
Note that only Django core commands are listed as settings are not properly configured (error: Requested setting INSTALLED_APPS, but settings are not configured. You must either define the environment variable DJANGO_SETTINGS_MODULE or call settings.configure() before accessing settings.).

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango> django-admin startproject studybud

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango>cd studybud

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango\studybud>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
May 14, 2024 - 13:26:22
Django version 5.0.6, using settings 'studybud.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

[14/May/2024 13:26:29] "GET / HTTP/1.1" 200 10629
Not Found: /favicon.ico
[14/May/2024 13:26:30] "GET /favicon.ico HTTP/1.1" 404 2112

(envDjangoPractice20240514) D:\Software\2024\Python\PythonDjango\studybud>^X^Z^X